--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.3.1",
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -15,10 +16,14 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.22",
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.25.0",
+    "msw": "^0.36.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -51,5 +56,8 @@
   },
   "devDependencies": {
     "craco-alias": "^3.0.1"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
